--- a/Dungeon_AI_v1.ipynb
+++ b/Dungeon_AI_v1.ipynb
@@ -71,55 +71,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-07T14:12:01.517825Z",
-     "start_time": "2025-05-07T14:12:00.552643Z"
+     "end_time": "2025-05-09T15:32:13.661090Z",
+     "start_time": "2025-05-09T15:32:10.494459Z"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/markdown": [
-       "## Welcome to the Fantasy Adventure Game"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d0a9bbf88d6240399c08b1ff804270ff",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(Dropdown(description='Difficulty:', index=1, layout=Layout(width='50%'), options=('Easy', 'Medi…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5897780ff9b5474b8efc32ccbd2f6511",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
    "source": [
     "# --- IMPORTS ---\n",
     "import os\n",
@@ -259,6 +216,7 @@
     "        \"After the story, provide any game state updates (health, gold, inventory, xp) in this JSON format:\\n\"\n",
     "        \"`<META>{\\\"health\\\": -10, \\\"gold\\\": +5, \\\"xp\\\": 10, \\\"inventory_add\\\": [\\\"amulet\\\"], \\\"inventory_remove\\\": [\\\"torch\\\"], \\\"equip\\\": {\\\"right_hand\\\": \\\"iron sword\\\"}, \\\"unequip\\\": [\\\"helmet\\\"]}</META>`\\n\"\n",
     "        \"If no update is needed, just write `<META>{}</META>`.\\n\"\n",
+    "        \"You can create new, unique items (e.g., \\\"Enchanted Ruby\\\", \\\"Mystic Scroll\\\", \\\"Shadow Dagger\\\") to add to the inventory.\\n\"\n",
     "        \"All JSON keys and string values must be in double quotes to ensure valid JSON.\\n\\n\"\n",
     "        f\"Difficulty: {difficulty}\\n\"\n",
     "        f\"Stats: {player_stats}\\n\"\n",
@@ -500,7 +458,48 @@
     "    display(output_area)\n",
     "    game_ui_initialized = True\n",
     "\n"
-   ]
+   ],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ],
+      "text/markdown": "## Welcome to the Fantasy Adventure Game"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "HBox(children=(Dropdown(description='Difficulty:', index=1, layout=Layout(width='50%'), options=('Easy', 'Medi…"
+      ],
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "c2568aff073844a7a9551a9c4e458e77"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Output()"
+      ],
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "b2dba3c7f9054b07b32c2b7bf41cecc2"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "execution_count": 1
   }
  ],
  "metadata": {
