parsing method update, error handling invalid json format

--- a/Dungeon_AI_v1.ipynb
+++ b/Dungeon_AI_v1.ipynb
@@ -71,12 +71,55 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-05-09T15:32:13.661090Z",
      "start_time": "2025-05-09T15:32:10.494459Z"
     }
    },
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "## Welcome to the Fantasy Adventure Game"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "199bc54bab724cdf9adf9e6ab71a1915",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(Dropdown(description='Difficulty:', index=1, layout=Layout(width='50%'), options=('Easy', 'Medi…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "86bc0fe4e1bc4aaab4b3e159078a3bd4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# --- IMPORTS ---\n",
     "import os\n",
@@ -275,6 +318,10 @@
     "                if slot in equipment and equipment[slot]:\n",
     "                    inventory.append(equipment[slot])\n",
     "                    equipment[slot] = None\n",
+    "\n",
+    "    except json.JSONDecodeError:\n",
+    "        story_only += f\"\\n\\n❌ Error parsing meta update: Invalid JSON format.\"\n",
+    "\n",
     "    except Exception as e:\n",
     "        story_only += f\"\\n\\n❌ Error parsing meta update: {e}\"\n",
     "\n",
@@ -458,48 +505,7 @@
     "    display(output_area)\n",
     "    game_ui_initialized = True\n",
     "\n"
-   ],
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ],
-      "text/markdown": "## Welcome to the Fantasy Adventure Game"
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "HBox(children=(Dropdown(description='Difficulty:', index=1, layout=Layout(width='50%'), options=('Easy', 'Medi…"
-      ],
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "c2568aff073844a7a9551a9c4e458e77"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Output()"
-      ],
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "b2dba3c7f9054b07b32c2b7bf41cecc2"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "execution_count": 1
+   ]
   }
  ],
  "metadata": {
