--- a/Dungeon_AI_v1.ipynb
+++ b/Dungeon_AI_v1.ipynb
@@ -71,55 +71,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-09T15:32:13.661090Z",
-     "start_time": "2025-05-09T15:32:10.494459Z"
+     "end_time": "2025-05-09T17:34:00.964048Z",
+     "start_time": "2025-05-09T17:33:59.932588Z"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/markdown": [
-       "## Welcome to the Fantasy Adventure Game"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e55c29958d22498a82112d9041f7008c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(Dropdown(description='Difficulty:', index=1, layout=Layout(width='50%'), options=('Easy', 'Medi…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e75fde887b7745ac9c41e1433aef50bc",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
    "source": [
     "# --- IMPORTS ---\n",
     "import os\n",
@@ -312,6 +269,9 @@
     "        \"**Any item meant for equipping must clearly correspond to one of these slots: `left_hand`, `right_hand`, `helmet`, `chestplate`, `leggings`, `boots`, `accessory_1`, or `accessory_2`.**\\n\"\n",
     "        \"Make sure equipped items are placed in the correct slot in the `equip` field of the JSON.\\n\"\n",
     "        \"All JSON keys and string values must be in double quotes to ensure valid JSON.\\n\\n\"\n",
+    "        \"Player's attacks should scale with their strength. Use the formula: base_damage + (strength × 0.5).\\n\"\n",
+    "        \"Defense reduces damage taken. Use the formula: incoming_damage × (1 - defense × 0.03).\\n\"\n",
+    "        \"\"\n",
     "        f\"Difficulty: {difficulty}\\n\"\n",
     "        f\"Stats: {player_stats}\\n\"\n",
     "        f\"Inventory: {inventory}\\n\\n\"\n",
@@ -341,10 +301,19 @@
     "    try:\n",
     "        updates = json.loads(meta_match.group(1))\n",
     "        if \"health\" in updates:\n",
-    "            player_stats[\"health\"] = min(\n",
-    "                player_stats.get(\"max_health\", 100),\n",
-    "                max(0, player_stats.get(\"health\", 100) + updates[\"health\"])\n",
-    "            )\n",
+    "            damage = updates[\"health\"]\n",
+    "            if damage < 0:  # Only apply defense reduction on damage taken\n",
+    "                defense = player_stats.get(\"defense\", 0)\n",
+    "                reduced_damage = int(damage * (1 - (defense * 0.03)))  # 3% reduction per defense point\n",
+    "                player_stats[\"health\"] = min(\n",
+    "                    player_stats.get(\"max_health\", 100),\n",
+    "                    max(0, player_stats.get(\"health\", 100) + reduced_damage)\n",
+    "                )\n",
+    "            else:\n",
+    "                player_stats[\"health\"] = min(\n",
+    "                    player_stats.get(\"max_health\", 100),\n",
+    "                    player_stats.get(\"health\", 100) + damage\n",
+    "                )\n",
     "        if \"gold\" in updates:\n",
     "            player_stats[\"gold\"] = max(0, player_stats.get(\"gold\", 0) + updates[\"gold\"])\n",
     "        if \"xp\" in updates:\n",
@@ -559,7 +528,48 @@
     "    display(output_area)\n",
     "    game_ui_initialized = True\n",
     "\n"
-   ]
+   ],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ],
+      "text/markdown": "## Welcome to the Fantasy Adventure Game"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "HBox(children=(Dropdown(description='Difficulty:', index=1, layout=Layout(width='50%'), options=('Easy', 'Medi…"
+      ],
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "ae876993f7b24d6eaa93eaa90e09a5ee"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Output()"
+      ],
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "cb3e833235ce42c0a5d83547e1f3a002"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "execution_count": 1
   }
  ],
  "metadata": {
