items have stat boost, still need to add more items to the list of items with stat boosts

--- a/Dungeon_AI_v1.ipynb
+++ b/Dungeon_AI_v1.ipynb
@@ -71,12 +71,55 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-05-09T17:34:00.964048Z",
      "start_time": "2025-05-09T17:33:59.932588Z"
     }
    },
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "## Welcome to the Fantasy Adventure Game"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "86c0de7dcfd0468793e8bff4cfcdc1db",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(Dropdown(description='Difficulty:', index=1, layout=Layout(width='50%'), options=('Easy', 'Medi…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2accf0a6d4f7441993a3e6624833afa3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# --- IMPORTS ---\n",
     "import os\n",
@@ -117,6 +160,18 @@
     "    \"accessory_1\": None,\n",
     "    \"accessory_2\": None\n",
     "}\n",
+    "\n",
+    "item_stat_boosts = {\n",
+    "    \"wooden sword\": {\"strength\": +2},\n",
+    "    \"iron sword\": {\"strength\": +5},\n",
+    "    \"torch\": {\"intelligence\": +1},\n",
+    "    \"amulet of wisdom\": {\"intelligence\": +5},\n",
+    "    \"boots of speed\": {\"endurance\": +2},\n",
+    "    \"helmet of resilience\": {\"defense\": +2},\n",
+    "    \"wooden stick\": {\"strength\": +1},\n",
+    "    # Add more items as needed\n",
+    "}\n",
+    "\n",
     "\n",
     "# --- EQUIPMENT SLOT DETECTION ---\n",
     "def detect_equipment_slot(item_name):\n",
@@ -165,6 +220,14 @@
     "    return None\n",
     "\n",
     "\n",
+    "# --- CALCULATE TOTAL STATS WITH EQUIPMENT ---\n",
+    "def calculate_total_stat(stat_name):\n",
+    "    base = player_stats.get(stat_name, 0)\n",
+    "    boost = 0\n",
+    "    for item in equipment.values():\n",
+    "        if item and item in item_stat_boosts:\n",
+    "            boost += item_stat_boosts[item].get(stat_name, 0)\n",
+    "    return base + boost\n",
     "\n",
     "\n",
     "\n",
@@ -355,24 +418,31 @@
     "    health = f\"{player_stats.get('health', 0)}/{player_stats.get('max_health', 0)}\"\n",
     "    stamina = f\"{player_stats.get('stamina', 0)}/{player_stats.get('max_stamina', 0)}\"\n",
     "    mana = f\"{player_stats.get('mana', 0)}/{player_stats.get('max_mana', 0)}\"\n",
-    "    strength = player_stats.get('strength', 0)\n",
-    "    defense = player_stats.get('defense', 0)\n",
-    "    intelligence = player_stats.get('intelligence', 0)\n",
-    "    endurance = player_stats.get('endurance', 0)\n",
-    "    magic = player_stats.get('magic', 0)\n",
+    "    strength = calculate_total_stat('strength')\n",
+    "    defense = calculate_total_stat('defense')\n",
+    "    intelligence = calculate_total_stat('intelligence')\n",
+    "    endurance = calculate_total_stat('endurance')\n",
+    "    magic = calculate_total_stat('magic')\n",
     "    xp = f\"{player_stats.get('xp', 0)}/{player_stats.get('max_xp', 0)}\"\n",
     "    level = player_stats.get('level', 1)\n",
     "    gold = player_stats.get('gold', 0)\n",
     "\n",
-    "    equipped_items = \"\\n\".join([ \n",
-    "        f\"- 🫱 Right Hand: {equipment['right_hand'] or 'None'}\", \n",
-    "        f\"- 🫲 Left Hand: {equipment['left_hand'] or 'None'}\", \n",
-    "        f\"- 🪖 Helmet: {equipment['helmet'] or 'None'}\", \n",
-    "        f\"- 🛡️ Chestplate: {equipment['chestplate'] or 'None'}\", \n",
-    "        f\"- 👖 Leggings: {equipment['leggings'] or 'None'}\", \n",
-    "        f\"- 🥾 Boots: {equipment['boots'] or 'None'}\", \n",
-    "        f\"- 📿 Accessory 1: {equipment['accessory_1'] or 'None'}\", \n",
-    "        f\"- 📌 Accessory 2: {equipment['accessory_2'] or 'None'}\" \n",
+    "    def format_equipped(item):\n",
+    "        if item and item in item_stat_boosts:\n",
+    "            boosts = item_stat_boosts[item]\n",
+    "            boost_str = \", \".join(f\"{k}+{v}\" for k, v in boosts.items())\n",
+    "            return f\"{item} ({boost_str})\"\n",
+    "        return item or \"None\"\n",
+    "\n",
+    "    equipped_items = \"\\n\".join([\n",
+    "        f\"- 🫱 Right Hand: {format_equipped(equipment['right_hand'])}\",\n",
+    "        f\"- 🫲 Left Hand: {format_equipped(equipment['left_hand'])}\",\n",
+    "        f\"- 🪖 Helmet: {format_equipped(equipment['helmet'])}\",\n",
+    "        f\"- 🛡️ Chestplate: {format_equipped(equipment['chestplate'])}\",\n",
+    "        f\"- 👖 Leggings: {format_equipped(equipment['leggings'])}\",\n",
+    "        f\"- 🥾 Boots: {format_equipped(equipment['boots'])}\",\n",
+    "        f\"- 📿 Accessory 1: {format_equipped(equipment['accessory_1'])}\",\n",
+    "        f\"- 📌 Accessory 2: {format_equipped(equipment['accessory_2'])}\",\n",
     "    ])\n",
     "\n",
     "    display(Markdown(f\"### 📖 **Story so far**\\n{context}\"))\n",
@@ -528,48 +598,7 @@
     "    display(output_area)\n",
     "    game_ui_initialized = True\n",
     "\n"
-   ],
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ],
-      "text/markdown": "## Welcome to the Fantasy Adventure Game"
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "HBox(children=(Dropdown(description='Difficulty:', index=1, layout=Layout(width='50%'), options=('Easy', 'Medi…"
-      ],
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "ae876993f7b24d6eaa93eaa90e09a5ee"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Output()"
-      ],
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "cb3e833235ce42c0a5d83547e1f3a002"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "execution_count": 1
+   ]
   }
  ],
  "metadata": {
