definitive project folder aangeamaakt sabegame.json and dungeon ai moved to this folder, item_stats.py made with list of items and import added for this list in dungeon ai

--- a/project/Dungeon_AI_v1.ipynb
+++ b/project/Dungeon_AI_v1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-05-07T14:02:44.608144Z",
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-05-09T17:34:00.964048Z",
@@ -94,7 +94,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "86c0de7dcfd0468793e8bff4cfcdc1db",
+       "model_id": "1c4b3e131b2f4a32ae0aef138e3863ed",
        "version_major": 2,
        "version_minor": 0
       },
@@ -108,7 +108,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2accf0a6d4f7441993a3e6624833afa3",
+       "model_id": "038a0997fa5243fbb55c892bfcffd0b4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -130,6 +130,8 @@
     "from dotenv import load_dotenv\n",
     "import ipywidgets as widgets\n",
     "from IPython.display import display, clear_output, Markdown\n",
+    "from item_stats import item_stat_boosts\n",
+    "\n",
     "\n",
     "# --- LOAD API KEY ---\n",
     "load_dotenv()\n",
@@ -159,17 +161,6 @@
     "    \"boots\": None,\n",
     "    \"accessory_1\": None,\n",
     "    \"accessory_2\": None\n",
-    "}\n",
-    "\n",
-    "item_stat_boosts = {\n",
-    "    \"wooden sword\": {\"strength\": +2},\n",
-    "    \"iron sword\": {\"strength\": +5},\n",
-    "    \"torch\": {\"intelligence\": +1},\n",
-    "    \"amulet of wisdom\": {\"intelligence\": +5},\n",
-    "    \"boots of speed\": {\"endurance\": +2},\n",
-    "    \"helmet of resilience\": {\"defense\": +2},\n",
-    "    \"wooden stick\": {\"strength\": +1},\n",
-    "    # Add more items as needed\n",
     "}\n",
     "\n",
     "\n",
