--- a/project/Dungeon_AI_v1.ipynb
+++ b/project/Dungeon_AI_v1.ipynb
@@ -71,14 +71,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-05-09T17:34:00.964048Z",
      "start_time": "2025-05-09T17:33:59.932588Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "## Welcome to the Fantasy Adventure Game"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b1741f6fdc1f44f7b0f5615c19ae8e50",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(Dropdown(description='Difficulty:', index=1, layout=Layout(width='50%'), options=('Easy', 'Medi…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1e1440ba52ae48dd9d40c21064d965b7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# --- IMPORTS ---\n",
     "import os\n",
