--- a/project/Dungeon_AI.ipynb
+++ b/project/Dungeon_AI.ipynb
@@ -70,6 +70,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 🧙‍♂️✨ *Dungeon AI* ✨🐉"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
