--- a/project/Dungeon_AI.ipynb
+++ b/project/Dungeon_AI.ipynb
@@ -101,7 +101,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9ae9a1606c3f4f0ba3c21a94ca993743",
+       "model_id": "0cf71688bb7f4ca3a6797bca47eb5e67",
        "version_major": 2,
        "version_minor": 0
       },
@@ -115,7 +115,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c7787a40ce784506b6bb7d006618dd61",
+       "model_id": "ddcc4a2414a2499084d91c9dc3f69608",
        "version_major": 2,
        "version_minor": 0
       },
@@ -125,6 +125,41 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d48d483b82a84c1889245d8eeb7c8d30",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Text(value='', description='Enter Name: ', placeholder=\"Enter your character's name\")"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1f78ae2d77574984af46872ff3b9b90e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(button_style='success', description='Confirm Name', style=ButtonStyle())"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to the Fantasy Adventure Game, Test!\n"
+     ]
     }
    ],
    "source": [
