difficulty choice now decides, strenght, defense, health, stamina, mana and maximum fo the bars for all difficulties

--- a/project/Dungeon_AI.ipynb
+++ b/project/Dungeon_AI.ipynb
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-05-09T17:34:00.964048Z",
@@ -101,7 +101,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3e731a2b340848db9783e8b3865f847b",
+       "model_id": "0f023ffa828d4c66a2cefa2aadfaf74c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -115,12 +115,40 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "173c142a5140493381e0a1913ec50c07",
+       "model_id": "b1d029948b1f42399d66129b24d257cf",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
        "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "781aaceab7254b0cbf83119b7691892b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Text(value='', description='Enter Name: ', placeholder=\"Enter your character's name\")"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0875538ce817474491821047d6c0167a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(button_style='success', description='Confirm Name', style=ButtonStyle())"
       ]
      },
      "metadata": {},
